# negarabank

./: .env.example  .gitignore  README.md  databricks.yml  pyproject.toml  question1a.csv  question1b.py  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml
deployment/scripts/: create_uc_volumes.sh  deploy_dab.sh  setup_secrets.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
docs/: CONTRIBUTING.md  data_dictionary.md  runbook_troubleshoot.md
docs/design/: 2026-05-24-negarabank-platform-design.md
docs/plans/: 2026-05-24-negarabank-implementation.md
resources/: account_snapshot_job.yml  batch_etl_job.yml  clusters.yml  fraud_detection_job.yml
src/config/: bronze_tables.yml  gold_tables.yml  silver_tables.yml
src/notebooks/bronze/: 01_extract_oracle_accounts.py  02_extract_oracle_transactions.py  03_extract_oracle_credit_scores.py  04_extract_oracle_tickets.py
src/notebooks/gold/: 01_build_dim_customer.py  02_build_dim_account.py  03_build_dim_date.py  04_build_dim_event_type.py  05_build_fact_transactions.py  06_build_fact_mobile_events.py  07_build_fact_fraud_risk.py  08_build_customer_health_scorecard.py  09_build_fraud_detection_alerts.py
src/notebooks/silver/: 01_transform_accounts.py  02_transform_transactions.py
src/notebooks/streaming/: fraud_detection_job.py
src/python/: bronze_extractor.py  config.py  credit_scoring_pipeline.py  dq_framework.py  gold_builder.py  jdbc_extractor.py  kafka_consumer.py  schema_definitions.py  silver_transformer.py
src/sql/dq_checks/: gold_business_rules.sql  (+3 more)
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_jdbc_extractor.py  test_transformations.py
(+9 files in other folders)
